data/derived/comb/progs/unify/prog1490.ml.out
Characters 84-85:
  [([],0)]::a
            ^
Error: This expression has type 'a list * 'b
       but an expression was expected of type ('c list * int) list list
